--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Neuromobile - Marketing Activo Inteligente S.L.",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "newman-vcs-parser": "0.0.1"
+  }
 }
